<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginStart="5dp">
    <Button
    android:id="@+id/clear"
    android:layout_width="100dp"
    android:layout_height="65dp"
    android:layout_alignParentStart="true"
    android:layout_marginBottom="3dp"
    android:background="@drawable/radius"
    android:text="@string/clear"
    android:textSize="30sp" />
    <Button
        android:id="@+id/bracket"
        android:layout_width="100dp"
        android:layout_height="65dp"
        android:layout_alignParentTop="true"
        android:layout_toEndOf="@+id/clear"
        android:background="@drawable/radius"
        android:text="@string/bracket"
        android:textSize="30sp" />
    <Button
        android:id="@+id/remain"
        android:layout_width="100dp"
        android:layout_height="65dp"
        android:layout_alignParentTop="true"
        android:layout_toEndOf="@+id/bracket"
        android:background="@drawable/radius"
        android:text="@string/remain"
        android:textSize="30sp" />
    <Button
        android:id="@+id/divide"
        android:layout_width="100dp"
        android:layout_height="65dp"
        android:layout_alignParentTop="true"
        android:layout_toEndOf="@+id/remain"
        android:background="@drawable/radius"
        android:text="@string/divide"
        android:textSize="30sp" />
    <Button
        android:id="@+id/seven"
        android:layout_width="100dp"
        android:layout_height="65dp"
        android:layout_below="@+id/clear"
        android:layout_marginBottom="3dp"
        android:background="@drawable/radius"
        android:text="@string/seven"
        android:textSize="30sp" />
    <Button
        android:id="@+id/eight"
        android:layout_width="100dp"
        android:layout_height="65dp"
        android:layout_below="@+id/clear"
        android:layout_toEndOf="@+id/seven"
        android:background="@drawable/radius"
        android:text="@string/eight"
        android:textSize="30sp" />
    <Button
        android:id="@+id/nine"
        android:layout_width="100dp"
        android:layout_height="65dp"
        android:layout_below="@+id/clear"
        android:layout_toEndOf="@+id/eight"
        android:background="@drawable/radius"
        android:text="@string/nine"
        android:textSize="30sp" />
    <Button
        android:id="@+id/multiply"
        android:layout_width="100dp"
        android:layout_height="65dp"
        android:layout_below="@+id/clear"
        android:layout_toEndOf="@+id/nine"
        android:background="@drawable/radius"
        android:text="@string/multiply"
        android:textSize="30sp" />
    <Button
        android:id="@+id/four"
        android:layout_width="100dp"
        android:layout_height="65dp"
        android:layout_below="@+id/seven"
        android:layout_marginBottom="3dp"
        android:background="@drawable/radius"
        android:text="@string/four"
        android:textSize="30sp" />
    <Button
        android:id="@+id/five"
        android:layout_width="100dp"
        android:layout_height="65dp"
        android:layout_below="@id/seven"
        android:layout_toEndOf="@+id/four"
        android:background="@drawable/radius"
        android:text="@string/five"
        android:textSize="30sp" />
    <Button
        android:id="@+id/six"
        android:layout_width="100dp"
        android:layout_height="65dp"
        android:layout_below="@id/seven"
        android:layout_toEndOf="@+id/five"
        android:background="@drawable/radius"
        android:text="@string/six"
        android:textSize="30sp" />
    <Button
        android:id="@+id/minus"
        android:layout_width="100dp"
        android:layout_height="65dp"
        android:layout_below="@id/seven"
        android:layout_toEndOf="@id/six"
        android:background="@drawable/radius"
        android:text="@string/minus"
        android:textSize="30sp" />
    <Button
        android:id="@+id/one"
        android:layout_width="100dp"
        android:layout_height="65dp"
        android:layout_below="@id/four"
        android:layout_marginBottom="3dp"
        android:background="@drawable/radius"
        android:text="@string/one"
        android:textSize="30sp" />
    <Button
        android:id="@+id/two"
        android:layout_width="100dp"
        android:layout_height="65dp"
        android:layout_below="@id/four"
        android:layout_toEndOf="@id/one"
        android:background="@drawable/radius"
        android:text="@string/two"
        android:textSize="30sp" />
    <Button
        android:id="@+id/three"
        android:layout_width="100dp"
        android:layout_height="65dp"
        android:layout_below="@id/four"
        android:layout_toEndOf="@id/two"
        android:background="@drawable/radius"
        android:text="@string/three"
        android:textSize="30sp" />
    <Button
        android:id="@+id/plus"
        android:layout_width="100dp"
        android:layout_height="65dp"
        android:layout_below="@id/four"
        android:layout_toEndOf="@id/three"
        android:background="@drawable/radius"
        android:text="@string/plus"
        android:textSize="30sp" />
    <ToggleButton
        android:id="@+id/toggle"
        android:textOff="@string/toggle"
        android:textOn="@string/toggle"
        android:layout_width="100dp"
        android:layout_height="65dp"
        android:layout_below="@id/one"
        android:background="@drawable/radius"
        android:textSize="30sp" />
    <Button
        android:id="@+id/zero"
        android:layout_width="100dp"
        android:layout_height="65dp"
        android:layout_below="@id/one"
        android:layout_toEndOf="@id/toggle"
        android:background="@drawable/radius"
        android:text="@string/zero"
        android:textSize="30sp" />
    <Button
        android:id="@+id/dot"
        android:layout_width="100dp"
        android:layout_height="65dp"
        android:layout_below="@id/one"
        android:layout_toEndOf="@id/zero"
        android:background="@drawable/radius"
        android:text="@string/dot"
        android:textSize="30sp" />
    <Button
        android:id="@+id/equal"
        android:layout_width="100dp"
        android:layout_height="65dp"
        android:layout_below="@id/one"
        android:layout_toEndOf="@id/dot"
        android:background="@drawable/radius"
        android:text="@string/equal"
        android:textSize="30sp" />
</RelativeLayout>